--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -43,10 +43,174 @@
 </div> -->
 
 <!-- 
-<div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+<div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
 
 <p>run out of stock soon</p>
 -->
+
+<div class="card clearfix" data-score="26" data-price="229.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FFi91R"><img src="https://images-na.ssl-images-amazon.com/images/I/518tGPL3OxL._SX522_.jpg" alt="Apple Watch Series 3" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,876 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>26% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FFi91R">Apple Watch Series 3 (GPS, 42mm) - Space Gray Aluminium Case with Black Sport Band</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$229.00</span><span class="ori_price">$309.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FFi91R">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="42" data-price="23.28">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XqlEEp"><img src="https://images-na.ssl-images-amazon.com/images/I/81GIi3q6WDL._SX679_.jpg" alt="Logitech Bluetooth Audio Adapter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>4,067 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>42% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XqlEEp">Logitech Bluetooth Audio Adapter for Bluetooth Streaming</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$23.28</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XqlEEp">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="119.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RKFVhA"><img src="https://images-na.ssl-images-amazon.com/images/I/61DhYDhXXfL._SX679_.jpg" alt="Powerbeats3 Wireless Earphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3.jpg' %>"><p>2,960 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RKFVhA">Powerbeats3 Wireless Earphones - The Beats Decade Collection - Defiant Black-Red</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$119.00</span><span class="ori_price">$199.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RKFVhA">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="129.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XkyuUh"><img src="https://images-na.ssl-images-amazon.com/images/I/71vljm0sdoL._SX522_.jpg" alt="ASUS LED Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>686 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XkyuUh">ASUS VE248H 24" Full HD 1920x1080 2ms HDMI DVI VGA Back-lit LED Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$129.00</span><span class="ori_price">$219.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XkyuUh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="36" data-price="127.46">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NnnmS8"><img src="https://images-na.ssl-images-amazon.com/images/I/71l21XusvRL._SY879_.jpg" alt="Arlo Baby Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,010 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NnnmS8">Arlo Baby Monitor | Smart WIFI Baby Camera 1080P HD with 2-Way Audio, Night Vision, Air Sensors, Lullaby Player,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$127.46</span><span class="ori_price">$199.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NnnmS8">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="99.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NrDrWX"><img src="https://images-na.ssl-images-amazon.com/images/I/91MhLsU64XL._SX522_.jpg" alt="Polk Audio Atrium 4 Outdoor Speakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,103 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NrDrWX">Polk Audio Atrium 4 Outdoor Speakers with Powerful Bass (Pair, White) | All-Weather Durability | Broad Sound Coverage...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$199.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NrDrWX">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="36.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xpPbys"><img src="https://images-na.ssl-images-amazon.com/images/I/61FSnPYsXzL._SX679_.jpg" alt="Bluetooth Suitcase Turntable" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,745 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xpPbys">Innovative Technology VSC-550BT-TQ Victrola Vintage 3-Speed Bluetooth Suitcase Turntable with Speakers,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$36.94</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xpPbys">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="499.48">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZWPn4g"><img src="https://images-na.ssl-images-amazon.com/images/I/81KE0PK21-L._SY679_.jpg" alt="Razer Phone 2" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>262 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZWPn4g">Razer Phone 2 (New): Unlocked Gaming Smartphone – 120Hz QHD Display – Snapdragon 845 – Wireless Charging – Chroma....</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$499.48</span><span class="ori_price">$799.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZWPn4g">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FISK7e"><img src="https://images-na.ssl-images-amazon.com/images/I/71skCbgkerL._SX679_.jpg" alt="WiFi Range Extender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>17,944 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FISK7e">TP-Link | N300 WiFi Range Extender | Up to 300Mbps | WiFi Extender, Repeater, Wifi Signal Booster, Access Point...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FISK7e">Shop Now at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="30" data-price="41.99">
   <div class="image_box">
