--- a/app/views/deals_days/_day_01.html.erb
+++ b/app/views/deals_days/_day_01.html.erb
@@ -132,7 +132,7 @@
   <div class="inner">
     <span class="regular"><em>39% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2RB1mSk">CORSAIR K70 RGB MK.2 SE Mechanical RAPIDFIRE Gaming Keyboard - USB Passthrough & Media Controls - PBT Double-Shot Keycaps - Cherry MX Speed - RGB LED Backlit</a></p>
+    <p><a target="_blank" href="https://amzn.to/2RB1mSk">CORSAIR K70 RGB MK.2 SE Mechanical RAPIDFIRE Gaming Keyboard - USB Passthrough & Media Controls - PBT Extra-Shot Keycaps - Cherry MX Speed - RGB LED Backlit</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$179.99</span></address>
       <em>*Pricing may change and deals can expire fast.</em>
@@ -286,7 +286,7 @@
     <p><a target="_blank" href="https://amzn.to/2Yg56Lo">Portable Air Compressor Pump, AMDRFO Easy to Use Tire Inflator, Fast Inflating Tire Pump,12V 150 PSI Auto Digital Tire Inflator with Emergency Led...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$25.49</span><span class="ori_price">$35.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
