--- a/app/views/deals_days/_day_02.html.erb
+++ b/app/views/deals_days/_day_02.html.erb
@@ -272,7 +272,7 @@
     <p><a target="_blank" href="https://amzn.to/2ISAjPL">HyperDrive USB C Hub, Sanho Type C Multi-port Adapter for MacBook Pro 2018 2017 2016, Dual 6in2 Thunderbolt USB-C Dongle w Gigabit Ethernet,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$79.00</span><span class="ori_price">$99.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div>
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -382,7 +382,7 @@
     <p><a target="_blank" href="https://amzn.to/2xbJIez">Holy Stone HS170 Predator Mini RC Helicopter Drone 2.4Ghz 6-Axis Gyro 4 Channels Quadcopter Good Choice for Drone Training</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$35.99</span><span class="ori_price">$50.00</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -564,7 +564,7 @@
     <p><a target="_blank" href="https://amzn.to/2J74xNI">Medify MA-40 Medical Grade True HEPA (H13 99.97%) Air Purifier for 800 Sq. Ft. with Particle Sensor, Modern design</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$274.98</span><span class="ori_price">$349.00</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div>
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
