--- a/app/views/deals_days/_day_03.html.erb
+++ b/app/views/deals_days/_day_03.html.erb
@@ -297,7 +297,7 @@
     <p><a target="_blank" href="https://amzn.to/2XfIaPS">Presto 06852 16-Inch Electric Skillet with Glass Cover</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$30.71</span><span class="ori_price">$77.12</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -445,7 +445,7 @@
     <p><a target="_blank" href="https://amzn.to/2xhEU7x">AUVON iMedassist Monster Weekly Pill Organizer, 2nd Gen Extra Large Pill Box Case (7-Day / 4-Times-A-Day) with Huge Compartments to Hold Plenty of Fish Oils,..</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.29</span><span class="ori_price">$19.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
