--- a/app/views/deals_days/_day_05.html.erb
+++ b/app/views/deals_days/_day_05.html.erb
@@ -441,7 +441,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZYnYPr">Seat Cushion Pillow for Office Chair - 100% Memory Foam - Firm Coccyx Pad - for People 150-220lb - Tailbone, Sciatica, Lower Back Pain Relief...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$20.99</span><span class="ori_price">$32.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -533,7 +533,7 @@
     <p><a target="_blank" href="https://amzn.to/2Nnd9oE">Bike Phone Mount, Bicycle Cell Phone Holder,Universal Motorcycle Handlebar Rack With Rotation Adjustable Anti Shake Silicone BANDS Cycling ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.90</span><span class="ori_price">$19.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> </address>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
     </div>
