--- a/app/views/deals_days/_day_06.html.erb
+++ b/app/views/deals_days/_day_06.html.erb
@@ -369,7 +369,7 @@
     <p><a target="_blank" href="https://amzn.to/2X4FuEL">Diaper Bag Backpack,Upsimples Multi-Function Travel Backpack with Changing Pad|Stroller Strap, Laptop Back Pack for Working Mom&Dad,Large...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$26.99</span><span class="ori_price">$41.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -605,7 +605,7 @@
     <p><a target="_blank" href="https://amzn.to/2FtkiO7">WUNDER2 LAST & FOUND[ATION] 24+ Hour Flawless Coverage Foundation, Espresso</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$22.46</span><span class="ori_price">$29.95</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
