--- a/app/views/deals_days/_day_07.html.erb
+++ b/app/views/deals_days/_day_07.html.erb
@@ -393,7 +393,7 @@
     <p><a target="_blank" href="https://amzn.to/2X4ANGp">Kasa Smart WiFi Light Bulb, Multicolor by TP-Link – Smart LED Light Bulbs, Works with Alexa & Google (KL130)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
@@ -521,7 +521,7 @@
     <p><a target="_blank" href="https://amzn.to/2Fw5m1D">QFX PBX-61081BT/BL Portable Bluetooth Party Speaker</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$74.78</span><span class="ori_price">$199.99</span>
-        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div>
       </address>
       <em>*Pricing may change and deals can expire fast.</em>
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
