--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,110 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="60" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ROEVJC"><img src="https://m.media-amazon.com/images/I/61KU-rMV4IL._SR400,400_.jpg" alt="Wireless Charger Wireless Charging Pad" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>48 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ROEVJC">Wireless Charger Wireless Charging Pad - 10W Fast Charge for Samsung Galaxy S9/S9+/S8/S8+/S7/S7 Edge/S6 Edge+/Note5/Note8,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>60% off at $29.99</strong> with promo code: <strong>60XDQYEN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ROEVJC">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="27.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RMLv2X"><img src="https://m.media-amazon.com/images/I/61NQ-wHEYaL._SR400,400_.jpg" alt="True Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>39 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RMLv2X">True Wireless Earbuds, BassPal Bluetooth 5.0 Headphones TWS in-Ear Mini Headset w/Mic IPX7 Waterproof,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.49</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>45% off at $49.99</strong> with promo code: <strong>45VYYRNR</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RMLv2X">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JnOon4"><img src="https://m.media-amazon.com/images/I/61An+5FpFYL._SR400,400_.jpg" alt="Gravity Car Phone Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>169 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JnOon4">Gravity Car Phone Mount FLOVEME Cell Phone Holder for Car Hands Free Auto Lock Air Vent Car Phone Holder Compatible...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50FLM002</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 03, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JnOon4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="29.13">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FJAydG"><img src="https://m.media-amazon.com/images/I/71zUpZcUp9L._SR400,400_.jpg" alt="JZBRAIN Vacuum Sealer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>26 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FJAydG">JZBRAIN Vacuum Sealer | Automatic Air Sealing Machine For Food Saver w/Starter Kit | Compact Design ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.13</span><span class="ori_price">$46.99</span></address>
+      <p><span>Take <strong>38% off at $46.99</strong> with promo code: <strong>38SJ8XU7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FJAydG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="71" data-price="13.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xpt5fs"><img src="https://m.media-amazon.com/images/I/51Oc6catgyL._SR400,400_.jpg" alt="Bonim Insulated Coffee Travel Mug" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>71% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xpt5fs">Bonim Insulated Coffee Travel Mug - Leak Proof Plastic Travel Tea Mug with Lid for Women Men Teacher...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.89</span><span class="ori_price">$47.90</span></address>
+      <p><span>Take <strong>71% off at $47.90</strong> with promo code: <strong>71NRXWYH</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xpt5fs">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="9.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2J2XpDc"><img src="https://m.media-amazon.com/images/I/61+zmTedBdL._SR400,400_.jpg" alt="Digital Alarm Clock Wood LED" /></a>
