--- a/app/views/deals/_navbar.html.erb
+++ b/app/views/deals/_navbar.html.erb
@@ -5,8 +5,9 @@
    <div class="filter-search guide_controll amzpromo">
       <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text" data-filter="coupons">Coupons</button>
-      <button class="filter-button btn btn-md" data-filter="sales">Sales & Discounts</button>
+      <button class="filter-button btn btn-md" data-filter="sales">Sales & Offers</button>
       <button class="filter-button btn btn-md" data-filter="promotions">Promotions</button>
+      <button class="filter-button btn btn-md" data-filter="brands">Brand Deals</button>
  <!--      <button class="filter-button btn btn-md white-text" data-filter="mom">Mom</button>
       <button class="filter-button btn btn-md white-text" data-filter="friend">Friend</button> -->
       <input type="text" class="form-control" placeholder="Search here...">
@@ -18,8 +19,9 @@
       <p>Categories</p>
        <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text" data-filter="coupons">Coupons</button>
-      <button class="filter-button btn btn-md" data-filter="sales">Sales & Discounts</button>
+      <button class="filter-button btn btn-md" data-filter="sales">Sales & Offers</button>
       <button class="filter-button btn btn-md" data-filter="promotions">Promotions</button>
+      <button class="filter-button btn btn-md" data-filter="brands">Brand Deals</button>
 <!--       <button class="filter-button btn btn-md white-text" data-filter="mom">Mom</button>
       <button class="filter-button btn btn-md white-text" data-filter="friend">Friend</button> -->
       <!-- <input type="text" class="form-control" placeholder="Search gift you want to"> -->
