--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -67,7 +67,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes We've Picked On Amazon Jul. 01. 2019.</h2>
+          <h2>Promotion Codes We've Picked On Amazon Jul. 02. 2019.</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -81,9 +81,29 @@
           
           <div class="card_wrap sort-list">
             <%= render 'shared/amz_search' %>
+
+            <!-- <div id="movie-card-list">
+              <div class="movie-card" data-movie="Blade Runner">
+                <div class="movie-card__overlay"></div>
+                <div class="movie-card__share">
+                  <button class="movie-card__icon"><i class="material-icons">&#xe87d</i></button>
+                  <button class="movie-card__icon"><i class="material-icons">&#xe253</i></button>
+                  <button class="movie-card__icon"><i class="material-icons">&#xe80d</i></button>
+                </div>
+                <div class="movie-card__content">
+                  <div class="movie-card__header">
+                    <h1 class="movie-card__title">Blade Runner</h1>
+                    <h4 class="movie-card__info">(1982) Sci-Fi, Thriller</h4>
+                  </div>
+                  <p class="movie-card__desc">A blade runner must pursue and try to terminate four replicants who stole a ship in space and have returned to Earth to find their creator.</p>
+                  <button class="btn btn-outline movie-card__button" type="button">Watch Trailer</button>
+                </div>
+              </div>
+            </div>
+ -->
             <%= render 'deals/body_promocode' %>
           </div>
-          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_02">GO TO PROMO CODES OF YESTERDAY</a></h2>
+          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_03">GO TO PROMO CODES OF YESTERDAY</a></h2>
           
         </div><!--./rt_cnt-->    
 
