--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -181,13 +181,13 @@
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J5Ldlj">Shop Now at Amazon</a></div>
 </div>
 
-<div class="card clearfix" data-score="percentage" data-price="39.99">
+<div class="card clearfix" data-score="33" data-price="39.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2J3LFQN"><img src="https://images-na.ssl-images-amazon.com/images/I/51ujr2l992L.jpg" alt="Days of Wonder Memoir '44" /></a>
     <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>183 Amazon Reviews</p></div>
   </div>
   <div class="inner">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2J3LFQN">Days of Wonder Memoir '44</a></p>
     <div class="code_high">
